@@ -9,6 +9,7 @@ Version 1.7.0-svn:
    * Changed AI Lifecycle handling. Console AI is now persistent between 
      invocations.
    * Added AI Arena test map to test AIs in interactive mode ( ai_arena_small )
+   * Changed interaction between default AI an Formula AI - made default AI not fallback to formula AI
  * Editor2:
    * New feature: exporting of selection coordinates to system clipboard
    * Made auto terrain transition mode tri-state: on (editor2's on), partial
